Upgrade to Spring Boot 4
Signed-off-by: Paul-Erik Törrönen <poltsi@poltsi.fi>